--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,6 +1,6 @@
 - title: me.
   entries:
-    - title: a FE developer, business data analyst based in London - no music when coding
+    - title: To me, data is storytelling, a tool to enable strategic focus.
     - title: github
       url: https://github.com/kimava
     - title: linkedin
