--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,14 @@ sass:
 collections:
   projects:
     output: true
+
+defaults:
+  - scope:
+      path: ''
+      type: 'projects'
+    values:
+      layout: 'project'
+  - scope:
+      path: ''
+    values:
+      layout: 'default'
